HelloUltraviolet/Fixtures/RejectedSource/Expressions/FieldInitNamesAndSet/Expected.uv
//! Expected diagnostic metadata for the FieldInitNamesAndSet rejected-source specimen.

expectedDiagnostic("E-TYP-1903", "def.16.FieldInitNamesAndSet")
